# mobile_system_control

carla_msgs/msg/: CarlaEgoVehicleInfo.msg
mobile_system_control/: CMakeLists.txt  package.xml
mobile_system_control/include/: mobile_system_control.h
mobile_system_control/launch/: mobile_system_launch.py
mobile_system_control/src/: main.cpp  mobile_system_control.cpp
odometry_csv/: package.xml  setup.cfg  setup.py
odometry_csv/odometry_csv/: save_odometry.py
pid_control/: CMakeLists.txt  package.xml
pid_control/include/: pid_controller.h
pid_control/launch/: pid_launch.py
pid_control/src/: main.cpp  pid_controller.cpp
pid_control/track/: 250504_pathin_modified.txt  new_waypoint.csv  o.csv  ochang_path.csv  odomet_utm.csv  odometry25-2-3(2).csv  odometry25-2-3.csv  odometry_25_1_18_2.csv  odometry_data.csv  odometry_path.csv  playground_path.csv  update_odometry25_1_18.csv  utm_ochang.csv  waypoint_inxy.csv
pure_pursuit/: CMakeLists.txt  package.xml
pure_pursuit/include/: controller.h  pure_pursuit.h  ros_data.h
pure_pursuit/launch/: control.launch.xml  pure_pursuit.launch.py
pure_pursuit/src/: controller.cpp  pure_pursuit.cpp  ros_data.cpp
trackvisualizer/: CMakeLists.txt  package.xml
trackvisualizer/include/: trackvisualizer.h
trackvisualizer/launch/: trackvisualizer_launch.py
trackvisualizer/rviz/: track.rviz
trackvisualizer/src/: main.cpp  trackvisualizer.cpp
trackvisualizer/track/: new_waypoint.csv  update_odometry25_1_18.csv
