<package format="3">
  <name>pid_control</name>
  <version>0.1.0</version>
  <description>PID Control Example Package for ROS2</description>
  <maintainer email="jiyou@todo.todo">jiyou</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
